Updated project files and fixed bugs

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Aleksandar Pajkanovic | Frontend Developer</title>
+
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Portfolio Aleksandra Pajkanovića - Frontend Developer"
+      content="Portfolio Aleksandra Pajkanovića - Frontend Developer. Pogledajte moje projekte i veštine u web razvoju."
     />
-    <meta name="keywords" content="Frontend, Developer, React, Portfolio" />
+    <meta
+      name="keywords"
+      content="Frontend, Developer, React, JavaScript, Portfolio, Web Development"
+    />
+    <meta name="author" content="Aleksandar Pajkanovic" />
+
+    <!-- Open Graph Meta Tags  -->
     <meta
       property="og:title"
       content="Aleksandar Pajkanovic | Frontend Developer"
@@ -16,18 +26,35 @@
       property="og:description"
       content="Pogledajte moj portfolio sa projektima i veštinama u web razvoju."
     />
-    <meta property="og:image" content="/assets/images/preview.png" />
+    <meta
+      property="og:image"
+      content="https://your-portfolio.vercel.app/assets/images/preview.png"
+    />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://your-portfolio.vercel.app" />
 
-    <title>My Portfolio - Aleksandar Pajkanovic</title>
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Aleksandar Pajkanovic | Frontend Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Pogledajte moj portfolio sa projektima i veštinama u web razvoju."
+    />
+    <meta
+      name="twitter:image"
+      content="https://your-portfolio.vercel.app/assets/images/preview.png"
+    />
 
     <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link
-      rel="icon"
+      rel="apple-touch-icon"
+      sizes="180x180"
       type="image/png"
       sizes="192x192"
       href="/android-chrome-192x192.png"
@@ -39,30 +66,16 @@
       href="/android-chrome-512x512.png"
     />
 
-    <!-- Manifest (za mobilne uređaje i PWA, ako koristiš) -->
     <link rel="manifest" href="/manifest.json" />
 
-    <!-- SEO Meta Tags -->
-    <meta
-      name="description"
-      content="Aleksandar Pajkanovic | Frontend Developer Portfolio"
+    <!-- ✅ Google Fonts - Roboto -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
     />
-    <meta
-      name="keywords"
-      content="Frontend Developer, Portfolio, React, JavaScript, Web Development"
-    />
-    <meta name="author" content="Aleksandar Pajkanovic" />
 
-    <!-- Open Graph Meta Tags (za društvene mreže) -->
-    <meta property="og:title" content="My Portfolio - Aleksandar Pajkanovic" />
-    <meta
-      property="og:description"
-      content="Frontend Developer with a passion for web development."
-    />
-    <meta property="og:image" content="/assets/images/logo.png" />
-    <!-- Promeni ako želiš drugu sliku -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourportfolio.com" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="/src/index.css" />
   </head>
   <body>
     <div id="root"></div>
